--- a/.env.copy
+++ b/.env.copy
@@ -13,5 +13,5 @@ AUTO_SELL_DELAY=20000
 LOG_LEVEL=info
 TAKE_PROFIT=300
 STOP_LOSS=50
-BIRDEYE_API_KEY=4a9711ae64754baeadb58aa26fe3debc
+BIRDEYE_API_KEY=
 MIN_POOL_SIZE=10
