--- a/.env.copy
+++ b/.env.copy
@@ -1,6 +1,6 @@
-PRIVATE_KEY=
-RPC_ENDPOINT=
-RPC_WEBSOCKET_ENDPOINT=wss://
+PRIVATE_KEY=4aJAhPgwQALzg74EXXXXXXXXXXXXXXXXXXX
+RPC_ENDPOINT=https://rpc.shyft.to?api_key=XXXXXXXXXXXX
+RPC_WEBSOCKET_ENDPOINT=wss://rpc.shyft.to?api_key=XXXXXXXXXXXX
 QUOTE_MINT=WSOL
 QUOTE_AMOUNT=0.01
 COMMITMENT_LEVEL=finalized
@@ -13,5 +13,5 @@ AUTO_SELL_DELAY=20000
 LOG_LEVEL=info
 TAKE_PROFIT=300
 STOP_LOSS=50
-BIRDEYE_API_KEY=
+BIRDEYE_API_KEY=4a9711ae647XXXXXXXXXXXXXXXX
 MIN_POOL_SIZE=5
