--- a/.env.copy
+++ b/.env.copy
@@ -7,10 +7,13 @@ COMMITMENT_LEVEL=finalized
 USE_SNIPE_LIST=false
 SNIPE_LIST_REFRESH_INTERVAL=30000
 CHECK_IF_MINT_IS_RENOUNCED=true
+CHECK_IF_IS_BURNED=true
+CHECK_IF_IS_LOCKED=true
 AUTO_SELL=true
 MAX_SELL_RETRIES=5
 AUTO_SELL_DELAY=20000
 LOG_LEVEL=info
+ONE_TOKEN_AT_A_TIME=true
 TAKE_PROFIT=300
 STOP_LOSS=50
 BIRDEYE_API_KEY=4a9711ae647XXXXXXXXXXXXXXX
